change overall bgc for pages and add darker shade color to the link on the link of the footer to fix visibility issues on index page

--- a/styles/common.css
+++ b/styles/common.css
@@ -7,7 +7,7 @@
 }
 
 body {
-  background-color: #eaf6f6;
+  background-color: #abc9ff;
   font-family: "Open Sans", sans-serif;
   text-align: center;
 }
