--- a/styles/style.css
+++ b/styles/style.css
@@ -21,7 +21,7 @@ img {
 }
 
 footer a {
-  color: #77bdbd;
+  color: #3c5d5d;
 }
 
 footer a:active,
